# optimus-guest-driver

./: .gitignore  Makefile  libvai.c  libvai.h  vai_core.c  vai_internal.h  vai_para.c  vai_para.h  vai_types.h
core/: vai_core.c
fake_hv/: Makefile  vai_mdev.c
include/: libvai.h  malloc.h  vai_types.h
include/vai/: malloc.h  vai.h  vai_types.h
lib/: libvai.c  malloc.c
libvai/: CMakeLists.txt
libvai/src/: buffer.c  close.c  dlmalloc.c  dlmalloc.h  enum.c  event.c  manage.c  mmio.c  open.c  reset.c  types_int.h  vai_utils.c  vai_utils.h
test/: vai_app.c
userspace/: Makefile
userspace/dlmalloc/: Makefile  malloc.c
